# ChoutenKMP

./: settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/assets/: add.wasm
core/UI/: build.gradle.kts
core/UI/src/iosMain/kotlin/com.inumaki.core.ui/: DataStore.ios.kt
features/Discover/: build.gradle.kts
features/Discover/src/commonMain/kotlin/com.inumaki.features.discover/: DiscoverEntry.kt  DiscoverView.kt  DiscoverViewModel.kt  DiscoverViewSuccess.kt
features/Home/: build.gradle.kts
features/Home/src/commonMain/kotlin/com.inumaki.features.home/: HomeEntry.kt  HomeView.kt
features/Info/src/commonMain/kotlin/dev.chouten.features.info/: InfoView.kt
features/Repo/: build.gradle.kts
features/Repo/src/commonMain/kotlin/com.inumaki.features.repo/: RepoEntry.kt  RepoView.kt
features/Settings/src/commonMain/kotlin/dev.chouten.features.settings/: SettingsEntry.kt  SettingsView.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
runners/Relay/: build.gradle.kts
runners/Relay/src/androidMain/kotlin/dev.chouten.runners.relay/: NativeBridge.android.kt
runners/Relay/src/iosMain/c_interop/: relay.def
runners/Relay/src/main/: CMakeLists.txt
runners/Relay/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  relay_native.cpp
runners/Relay/src/main/engine/: relay_native.hpp
runners/Relay/src/main/include/: relay_c_api.h
runners/Relay/src/main/platform/android/: jni_bridge.cpp
runners/Relay/src/main/platform/ios/: ios_bridge.mm
(+35 files in other folders)
